Support of indexes for inV() and outV() funcitons was added.